Add options page.

--- a/assets/html/options.html
+++ b/assets/html/options.html
@@ -1,1 +1,14 @@
-<p>Hello world!</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>活动页</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script defer src="options.js"></script>
+    <style>
+    </style>
+    </head>
+  <body>
+    <div id="container"></div>
+  </body>
+</html>
