--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -16,6 +16,7 @@
       }
 
       .loading-icon {
+        margin: 0 16px;
         font-size: 16px;
         width: 1em;
         height: 1em;
@@ -27,7 +28,7 @@
     </head>
   <body>
     <div id="loading">
-      <p>正在加载依赖中，请稍等片刻<i class="loading-icon"></i></p>
+      <p>正在加载中，请稍等片刻<i class="loading-icon"></i></p>
     </div>
     <div id="container"></div>
   </body>
